--- a/WindowsFormsApp1/QuanLyBanCafe.csproj
+++ b/WindowsFormsApp1/QuanLyBanCafe.csproj
@@ -12,6 +12,21 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,6 +48,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BCrypt.Net, Version=0.1.4141.31969, Culture=neutral, PublicKeyToken=f3bc8f8c31beeb49, processorArchitecture=MSIL">
+      <HintPath>..\packages\BCrypt.Net.0.1.0\lib\net35\BCrypt.Net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -95,20 +113,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="provider\ClickShowPass.cs" />
     <Compile Include="provider\DataProvider.cs" />
-    <Compile Include="QuanLyBanCafeDataSet.Designer.cs">
+    <Compile Include="QLQuanCaPheDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>QuanLyBanCafeDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="QuanLyBanCafeDataSet1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>QuanLyBanCafeDataSet1.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="QuanLyBanCafeDataSet2.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>QuanLyBanCafeDataSet2.xsd</DependentUpon>
+      <DependentUpon>QLQuanCaPheDataSet.xsd</DependentUpon>
     </Compile>
     <EmbeddedResource Include="form\frm_admin.resx">
       <DependentUpon>frm_admin.cs</DependentUpon>
@@ -137,6 +145,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -146,38 +155,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="QuanLyBanCafeDataSet.xsc">
-      <DependentUpon>QuanLyBanCafeDataSet.xsd</DependentUpon>
+    <None Include="QLQuanCaPheDataSet.xsc">
+      <DependentUpon>QLQuanCaPheDataSet.xsd</DependentUpon>
     </None>
-    <None Include="QuanLyBanCafeDataSet.xsd">
+    <None Include="QLQuanCaPheDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>QuanLyBanCafeDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>QLQuanCaPheDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="QuanLyBanCafeDataSet.xss">
-      <DependentUpon>QuanLyBanCafeDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="QuanLyBanCafeDataSet1.xsc">
-      <DependentUpon>QuanLyBanCafeDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="QuanLyBanCafeDataSet1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>QuanLyBanCafeDataSet1.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="QuanLyBanCafeDataSet1.xss">
-      <DependentUpon>QuanLyBanCafeDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="QuanLyBanCafeDataSet2.xsc">
-      <DependentUpon>QuanLyBanCafeDataSet2.xsd</DependentUpon>
-    </None>
-    <None Include="QuanLyBanCafeDataSet2.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>QuanLyBanCafeDataSet2.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="QuanLyBanCafeDataSet2.xss">
-      <DependentUpon>QuanLyBanCafeDataSet2.xsd</DependentUpon>
+    <None Include="QLQuanCaPheDataSet.xss">
+      <DependentUpon>QLQuanCaPheDataSet.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -185,6 +172,27 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="images\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="QLQuanCaPhe.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="QLQuanCaPhe_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>QLQuanCaPhe.mdf</DependentUpon>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
+      <Visible>False</Visible>
+      <ProductName>Microsoft .NET Framework 4.7.2 %28x86 and x64%29</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
